pokemon, player, game and battle classes done

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       navegador para poder jugar.
     </p>
 
+    <button id="startSyncronous">Start from here: Syncronous</button>
+    <button id="startAsyncronous">
+      Start from here: Asyncronous, open your console
+    </button>
+
     <script src="utils.js"></script>
     <script src="pokedex.js"></script>
     <script src="pokemon.js"></script>
